recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: not found: value longueur
		recule(longueur);
                       ^Tree:13: error: not found: value longueur
		avance(longueur);
                       ^