recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	
	current(steps);
	if(steps == 7)
	{
		recule(longueur);
		gauche(angle);
		tree(0, length / shrink, angle, shrink);
	}
	else
	{
		avance(longueur);
		droite(angle);
		tree(steps + 1, length * shrink, angle, shrink);
	}
}
